# OpenKneeboard

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  Directory.Build.props  LICENSE  README.md  ]  dualarch.cmake  sign_target.cmake  vcpkg-configuration.json  vcpkg.json  windows_kits_dir.cmake
OpenKneeboard-Installer/: .gitignore  CMakeLists.txt  OpenKneeboard-Installer.csproj  OpenKneeboard-Installer.sln  OpenKneeboardPluginFileType.wxs  Program.cs  WixUI_Minimal_NoEULA.wxs  remove-msix.cpp  version.json.in
data/: CMakeLists.txt  Chromium.js  DCS-Aircraft-Mapping.json  OpenKneeboard-Experimental-DoodlesOnly.d.ts  OpenKneeboard-Experimental-GetGraphicsTabletInfo.d.ts  OpenKneeboard-Experimental-PageBasedContent.d.ts  OpenKneeboard-Experimental-Plugins.d.ts  OpenKneeboard-Experimental-RawCursorEvents.d.ts  OpenKneeboard-Experimental-SetCursorEventsMode.d.ts  OpenKneeboard.d.ts  OpenKneeboardAPI.js  OpenKneeboardNative.js  SimHub.js  WebView2-SimHub.js  WebView2.js  api-example-PageBasedContent.html  api-example-RawCursorEvents.html
installer/: CMakeLists.txt  LaunchAfterInstall.wxs  OpenKneeboardPluginFileType.wxs  OpenXRAPILayerRegistration.wxs  Powershell.wxs  RemoveMSIX.ps1  RemoveMSIX.wxs  RepairOnNextRun.wxs  WixUI_Minimal_NoEULA.wxs  patch.xml
scripts/: CMakeLists.txt  Directory.Build.targets  OpenKneeboard-with-d3d11.wprp  OpenKneeboard.wprp  args-to-lines.cpp  enable-full-dumps.reg  enable-log-files.reg  enable-mini-dumps.reg  make-compile-commands.in.ps1  make-compile-commands.ps1  run-clang-tidy-one-at-a-time.ps1  true.cpp
src/: CMakeLists.txt  CONTRIBUTING.md  ConsoleLoopCondition.cpp  EventListener.cpp  EventListener.h  FolderTab.cpp  GameEventNamedPipeListener.cpp  SHM.cpp  Tab.cpp  TabCanvasWidget.cpp  TabCanvasWidget.h  TabWidget.cpp  TabWidget.h  demo-feeder.cpp  kobuleti-feeder.cpp  main.cpp  sign_target.cmake  test-feeder.cpp  test-viewer.cpp  version.cmake  version.rc.in
src/YAVRK/: CMakeLists.txt  SHM.cpp  SHM.h
src/api/: CMakeLists.txt  OpenKneeboard_CAPI.cpp  OpenKneeboard_CAPI.h  OpenKneeboard_LuaAPI.cpp
src/app/: CMakeLists.txt  CachedLayer.cpp  CachedLayer.h  DXResources.cpp  DXResources.h  Events-wx.cpp  Events.cpp  Events.h  GameEventNamedPipeListener.h  GameEventServer.cpp  GameEventServer.h  GameInjector.cpp  GameInstance.cpp  GameInstance.h  GenericGame.cpp  GenericGame.h  GetIconFromExecutable.cpp  GetIconFromExecutable.h  Injectables.cpp.in  Injectables.h  InterprocessRenderer.cpp  InterprocessRenderer.h  KneeboardState.cpp  KneeboardState.h  OpenKneeboard.rc  OpenVROverlay.cpp  RuntimeFiles.cpp.in  RuntimeFiles.h  Settings.cpp  Settings.h  TabCanvasWidget.h  TabState.cpp  TabState.h  TabWidget.cpp  TabWidget.h  UserAction.h  appxmanifest.xml.cmake  appxmanifest.xml.in  main.cpp  okAboutBox.cpp  (+40 more)
src/app/DirectInput/: DirectInputAdapter.cpp  DirectInputListener.cpp  okDirectInputSettings.cpp  (+1 more)
src/dcs/: CMakeLists.txt  OpenKneeboardDCSExt.cpp  OpenKneeboardDCSExt.lua  YAVRK.lua  YAVRKDCSExt.cpp
src/dcs-hook/: CMakeLists.txt  OpenKneeboardDCSExt.cpp  OpenKneeboardDCSExt.lua
src/games/: CMakeLists.txt  DCS.cpp  DCSWorld.cpp  DCSWorldInstance.cpp  Game.cpp  GameInstance.cpp  GenericGame.cpp
src/injectables/: AutoDetectKneeboard.cpp  AutoInjectMarker.cpp  CMakeLists.txt  D3D11DeviceHook.cpp  D3D11DeviceHook.h  DllHook.cpp  DllHook.h  DllLoadWatcher.cpp  DllLoadWatcher.h  DllLoadWatcher.hpp  FindMainWindow.cpp  FindMainWindow.hpp  ID3D12CommandQueueExecuteCommandListsHook.cpp  ID3D12CommandQueueExecuteCommandListsHook.h  ID3D12CommandQueueExecuteCommandListsHook.hpp  IDXGISwapChainHook.cpp  IDXGISwapChainHook.h  IDXGISwapChainHook.hpp  IDXGISwapChainPresentHook.cpp  IDXGISwapChainPresentHook.h  IVRCompositorSubmitHook.cpp  IVRCompositorSubmitHook.h  IVRCompositorWaitGetPosesHook.cpp  IVRCompositorWaitGetPosesHook.h  IVRCompositorWaitGetPosesHook.hpp  InjectedDLLMain.h  InjectedDLLMain.hpp  InjectedKneeboard.cpp  InjectedKneeboard.h  InjectionBootstrapper.cpp  NonVRD3D11Kneeboard.cpp  NonVRD3D11Kneeboard.h  NonVRD3D11Kneeboard.hpp  OVRProxy.cpp  OVRProxy.h  OVRProxy.hpp  OVRRuntimeDLLNames.hpp  OculusD3D11Kneeboard.cpp  OculusD3D11Kneeboard.h  OculusD3D11Kneeboard.hpp  (+53 more)
src/lib/: APIEvent.cpp  CMakeLists.txt  ConsoleLoopCondition.cpp  D2DErrorRenderer.cpp  D3D11.cpp  D3D11On12.cpp  D3D12.cpp  DXResources.cpp  DebugTimer.cpp  Elevation.cpp  EnumerateProcesses.cpp  FilesDiffer.cpp  Filesystem.cpp  FlatConfig.cpp  GameEvent.cpp  Geometry2D.cmake  GetMainHWND.cpp  GetSystemColor.cpp  ITablet.cpp  IsElevated.cpp  NonVRConstrainedPosition.cpp  OpenVRKneeboard.cpp  OpenXRMode.cpp  PDFNavigation.cpp  RayIntersectsRect.cpp  RenderDoc.cpp  RenderError.cpp  RunSubprocessAsync.cpp  RuntimeFiles-app.cpp.in  RuntimeFiles.cpp.in  RuntimeFilesGetDirectory.cpp  RuntimeFilesGetInstallationDirectory.cpp  RuntimeFilesInstall.cpp  SHM.cpp  SteamVRKneeboard.cpp  ThreadGuard.cpp  VRKneeboard.cpp  Vulkan.cpp  WindowCaptureControl.cpp  WintabTablet.cpp  (+10 more)
src/shaders/: CMakeLists.txt  ScRGBToRGB.hlsl  Sprite.hlsl  SpriteBatch.hlsl  Viewer.hlsl
src/tabs/: CMakeLists.txt  DCSAircraftTab.cpp  DCSMissionTab.cpp  DCSRadioLogTab.cpp  DCSTab.cpp  DCSTerrainTab.cpp  FolderTab.cpp  Tab.cpp
src/utilities/: CMakeLists.txt  DDS.hpp  WindowCaptureHook-helper.cpp  capi-test.cpp  capi-test.py  chromium-worker.cpp  fake-dcs.cpp  icon.rc  launch-msix.cpp  openxr-helper.cpp  openxr-register-layer.cpp  pdf-helper.cpp  plugin-tab-action.cpp  remote-control.cmake  remote-control.cpp  remote-traceprovider.cpp  repair-helper.cpp  set-desired-elevation-helper.cpp  set-profile-remote.cpp  set-tab-remote.cpp  simple-remote.cpp  simple-remotes.cpp  simple-remotes.hpp  symbolize-traces.cpp  task-test.cpp  test-APIEvent-feeder.cpp  test-feeder.cpp  test-gameevent-feeder.cpp  test-viewer.cpp  uninstall-cleanup.cpp  uninstall-helper.cpp  utility.manifest.in  viewer-d3d11.cpp  viewer-d3d11.h  viewer-d3d11.hpp  viewer-d3d12.cpp  viewer-d3d12.h  viewer-d3d12.hpp  viewer-settings.cpp  viewer-settings.h  (+7 more)
(+1250 files in other folders)
